include padding on upper container to prevent header overlap

--- a/src/pages/AllProductsPage.module.css
+++ b/src/pages/AllProductsPage.module.css
@@ -10,6 +10,7 @@
   padding-inline: 1.5rem;
   gap: 1.25rem;
   padding-block-end: 2.313rem;
+  padding-block-start: 4rem;
 }
 
 .headingContainer {
